--- a/index.html
+++ b/index.html
@@ -2,53 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>PC Parts Retail Store</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <div class="brand">PC Parts Retail Store</div>
+    <div class="brand">PC Parts Retail</div>
     <nav>
+      <button id="btn-login">Login</button>
+      <button id="btn-register">Register</button>
       <span id="user-info"></span>
-      <button id="logout-btn" class="hidden">Logout</button>
-      <button id="open-cart" class="cart-btn hidden">Cart (<span id="cart-count">0</span>)</button>
+      <button id="btn-logout" class="hidden">Logout</button>
+      <button id="btn-cart" class="hidden">Cart (<span id="cart-count">0</span>)</button>
     </nav>
   </header>
-  <aside id="login-panel">
-    <h2>Login</h2>
-    <input id="login-username" placeholder="Username" />
-    <input id="login-password" type="password" placeholder="Password" />
-    <button id="login-btn">Login</button>
-    <div id="login-error" class="error"></div>
-  </aside>
-  <main id="app" class="hidden">
-    <section id="browse-section">
+  <!-- Login Modal -->
+  <div id="modal-login" class="modal hidden">
+    <div class="modal-content">
+      <h2>Login</nobr></h2>
+      <input id="login-username" placeholder="Username">
+      <input id="login-password" type="password" placeholder="Password">
+      <div id="login-error" class="error"></div>
+      <button id="login-submit">Login</button>
+      <button class="modal-close">Cancel</button>
+    </div>
+  </div>
+  <!-- Register Modal -->
+  <div id="modal-register" class="modal hidden">
+    <div class="modal-content">
+      <h2>Register</h2>
+      <input id="reg-fullname" placeholder="Full Name">
+      <input id="reg-username" placeholder="Username">
+      <input id="reg-address" placeholder="Shipping Address">
+      <input id="reg-password" type="password" placeholder="Password">
+      <div id="reg-error" class="error"></div>
+      <button id="reg-submit">Register</button>
+      <button class="modal-close">Cancel</button>
+    </div>
+  </div>
+  <main>
+    <section id="browse">
       <h2>Browse Products</h2>
-      <select id="category-filter">
-        <option value="">All Categories</option>
-      </select>
-      <div id="product-list" class="grid"></div>
+      <select id="category-filter"></select>
+      <div id="products-grid" class="grid"></div>
     </section>
-    <section id="admin-nav" class="hidden">
-      <button id="admin-products-btn">Products & Stock</button>
-      <button id="admin-orders-btn">Orders</button>
-    </section>
-    <section id="admin-products-panel" class="hidden">
-      <h2>Manage Products & Stock</h2>
-      <button id="new-product-btn">New Product</button>
-      <div id="product-admin-list"></div>
-    </section>
-    <section id="admin-orders-panel" class="hidden">
-      <h2>Orders</h2>
-      <ul id="orders-list"></ul>
+    <section id="admin-panel" class="hidden">
+      <div class="admin-nav">
+        <button id="admin-products">Products & Stock</button>
+        <button id="admin-orders">Orders</button>
+      </div>
+      <div id="admin-products-section" class="hidden">
+        <button id="new-product">New Product</button>
+        <div id="product-admin-list"></div>
+      </div>
+      <div id="admin-orders-section" class="hidden">
+        <ul id="orders-list"></ul>
+      </div>
     </section>
   </main>
-  <aside id="cart" class="hidden">
+  <!-- Cart -->
+  <aside id="cart-panel" class="hidden">
     <h2>Your Cart</h2>
     <ul id="cart-items"></ul>
     <div>Total: $<span id="cart-total">0.00</span></div>
-    <button id="checkout-btn">Checkout</button>
+    <button id="checkout">Checkout</button>
     <button id="close-cart">Close</button>
   </aside>
   <script src="app.js"></script>
