--- a/index.html
+++ b/index.html
@@ -20,52 +20,17 @@
       </nav>
     </header>
 
-    <!-- Login Modal -->
-    <div id="modal-login" class="modal hidden">
-      <div class="modal-content">
-        <h2>Login</h2>
-        <label for="login-username">Username</label>
-        <input id="login-username" placeholder="Username">
-        <label for="login-password">Password</label>
-        <input id="login-password" type="password" placeholder="Password">
-        <div id="login-error" class="error"></div>
-        <button id="login-submit">Login</button>
-        <button class="modal-close" id="cancel-login">Cancel</button>
+    <!-- Product Card Template -->
+    <template id="product-card-template">
+      <div class="card" data-id="">
+        <img src="" alt="">
+        <h3></h3>
+        <p class="price"></p>
+        <button class="add-btn">Add to Cart</button>
       </div>
-    </div>
+    </template>
 
-    <!-- Register Modal -->
-    <div id="modal-register" class="modal hidden">
-      <div class="modal-content">
-        <h2>Register</h2>
-        <label for="reg-fullname">Full Name</label>
-        <input id="reg-fullname" placeholder="Full Name">
-        <label for="reg-username">Username</label>
-        <input id="reg-username" placeholder="Username">
-        <label for="reg-address">Shipping Address</label>
-        <input id="reg-address" placeholder="Shipping Address">
-        <label for="reg-password">Password</label>
-        <input id="reg-password" type="password" placeholder="Password">
-        <div id="reg-error" class="error"></div>
-        <button id="reg-submit">Register</button>
-        <button class="modal-close" id="cancel-register">Cancel</button>
-      </div>
-    </div>
-
-    <!-- Product Detail Modal -->
-    <div id="modal-detail" class="modal hidden">
-      <div class="modal-content">
-        <button class="modal-close" id="close-detail">Close</button>
-        <img id="detail-image" src="" alt="">
-        <h2 id="detail-name"></h2>
-        <p id="detail-category"></p>
-        <p id="detail-price"></p>
-        <p id="detail-description"></p>
-        <div id="detail-more"></div>
-        <button id="detail-add-to-cart">Add to Cart</button>
-      </div>
-    </div>
-
+    <!-- Main Content -->
     <main>
       <h2>Browse Products</h2>
       <div class="filters">
@@ -80,6 +45,7 @@
       <div id="products-grid" class="grid"></div>
     </main>
 
+    <!-- Cart Panel -->
     <aside id="cart-panel" class="hidden">
       <h2>Your Cart</h2>
       <ul id="cart-items"></ul>
