--- a/index.html
+++ b/index.html
@@ -21,9 +21,37 @@
       </nav>
     </header>
 
-    <!-- Login & Register Modals (unchanged) -->
-    <div id="modal-login" class="modal hidden"> ... </div>
-    <div id="modal-register" class="modal hidden"> ... </div>
+    <!-- Login Modal -->
+    <div id="modal-login" class="modal hidden">
+      <div class="modal-content">
+        <h2>Login</h2>
+        <label for="login-username">Username</label>
+        <input id="login-username" placeholder="Username">
+        <label for="login-password">Password</label>
+        <input id="login-password" type="password" placeholder="Password">
+        <div id="login-error" class="error"></div>
+        <button id="login-submit">Login</button>
+        <button class="modal-close" id="cancel-login">Cancel</button>
+      </div>
+    </div>
+
+    <!-- Register Modal -->
+    <div id="modal-register" class="modal hidden">
+      <div class="modal-content">
+        <h2>Register</h2>
+        <label for="reg-fullname">Full Name</label>
+        <input id="reg-fullname" placeholder="Full Name">
+        <label for="reg-username">Username</label>
+        <input id="reg-username" placeholder="Username">
+        <label for="reg-address">Shipping Address</label>
+        <input id="reg-address" placeholder="Shipping Address">
+        <label for="reg-password">Password</label>
+        <input id="reg-password" type="password" placeholder="Password">
+        <div id="reg-error" class="error"></div>
+        <button id="reg-submit">Register</button>
+        <button class="modal-close" id="cancel-register">Cancel</button>
+      </div>
+    </div>
 
     <!-- Main Content: Table View -->
     <main>
@@ -54,7 +82,14 @@
       <div id="pagination" class="pagination"></div>
     </main>
 
-    <!-- Cart Panel & Detail Modal omitted for brevity -->
+    <!-- Cart Panel -->
+    <aside id="cart-panel" class="hidden">
+      <h2>Your Cart</h2>
+      <ul id="cart-items"></ul>
+      <div>Total: $<span id="cart-total">0.00</span></div>
+      <button id="checkout-btn">Checkout</button>
+      <button id="close-cart">Close</button>
+    </aside>
   </div>
   <script src="app.js"></script>
 </body>
